infrastructure/01-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: other-class
spec:
  controllerName: kgateway.dev/kgateway123 # This is wrong and status must be unknown
