infrastructure/02-gateway-bad.yaml
## This Gateway uses a bad Class and should never be accepted
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-bad
  namespace: gateway-ns
spec:
  gatewayClassName: other-class
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
